--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 .search-bar button {
   position: relative;
-  right: -40px;
+  right: -18%;
   background: none;
   border: none;
   font-size: 24px;
