--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   /* justify-self: right; */
   padding: 0;
   /* margin-right: auto; */
-  font-size: 1.0rem;
+  font-size: 1rem;
   align-self: center;
   color: #04211195;
   margin: 0 0px;
@@ -65,7 +65,7 @@ body {
 
 .nav-bar {
   display: flex;
-  width:auto;
+  width: auto;
   height: 100%;
   /* border: 1px solid red; */
   font-family: inherit;
@@ -254,9 +254,7 @@ body {
   color: #333;
   border: 2px solid white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition:
-    transform 0.8s ease,
-    opacity 0.8s ease;
+  transition: transform 0.8s ease, opacity 0.8s ease;
 }
 
 /* موقعیت مماس اولیه */
@@ -288,6 +286,31 @@ body {
 .orbit-item.fade-out {
   transform: rotate(240deg) scale(0.5);
   opacity: 0;
+}
+
+/* .graph {
+  display: flex;
+  position: relative;
+  top: 100px;
+  left: 100px;
+  align-items: center;
+  justify-items: center;
+} */
+.item {
+  display: flex;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Vazirmatn', sans-serif;
+  font-size: 0.8rem;
+  color: #042111;
+  position: absolute;
+  /* transform: translate(-50%, -50%); */
+  background: linear-gradient(135deg, #c1ffd7, #a0e7e5);
+  border: 2px solid white;
 }
 
 @keyframes rotateOrbit {
@@ -326,41 +349,46 @@ body {
   }
 }
 
-.orbit-item {
+.orbit-item,
+.item {
   /* transform-origin: center, center; */
   animation: pulse 1.2s ease-in-out infinite;
 }
 
 /* ترتیب تأخیر برای هر آیتم */
-.orbit-item:nth-child(1) {
+.orbit-item:nth-child(1),
+.item:nth-child(1) {
   animation-delay: 0s;
 }
-.orbit-item:nth-child(2) {
+.orbit-item:nth-child(2),
+.item:nth-child(2) {
   animation-delay: 0.3s;
 }
-.orbit-item:nth-child(3) {
+.orbit-item:nth-child(3),
+.item:nth-child(3) {
   animation-delay: 0.6s;
 }
-.orbit-item:nth-child(4) {
+.orbit-item:nth-child(4),
+.item:nth-child(4) {
   animation-delay: 0.9s;
 }
 
-@media (max-width : 600px){
-    .search-bar input{
-        /* background-color: red; */
-        display: none !important;
-    }
+@media (max-width: 600px) {
+  .search-bar input {
+    /* background-color: red; */
+    display: none !important;
+  }
 }
-@media (max-width : 400px){
-    .title{
-        /* background-color: red; */
-        font-size: 0.8rem;
-    }
-    .nav-bar a {
-        font-size: 0.7rem;
-    }
-    .search-icon {
-        scale: .8;
-        font-size: 1.1;
-    }
+@media (max-width: 400px) {
+  .title {
+    /* background-color: red; */
+    font-size: 0.8rem;
+  }
+  .nav-bar a {
+    font-size: 0.7rem;
+  }
+  .search-icon {
+    scale: 0.8;
+    font-size: 1.1;
+  }
 }
