--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
   padding: 0;
   display: flex;
   direction: rtl;
-  height: 100vh;
-  background: linear-gradient(to bottom, #fefefe, #e0e0e0);
+  min-height: 100vh;
+  height: auto;
+  background-color: #fefefe;
 }
 
 /* .gradient-box {
